# smg-claude-memory-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
.claude/hooks/: auto-store-check.sh  rules-check.sh  session-end-check.sh  session-start-check.sh
src/memory_mcp/: __init__.py  config.py  context.py  embeddings.py  models.py  server.py  setup.py
src/memory_mcp/db/: connection.py  provenance.py  queries.py  registry.py  schema.py
src/memory_mcp/tools/: delete.py  export_import.py  list_memories.py  model_manager.py  portable.py  project.py  recall.py  rules.py  search.py  session.py  store.py  update.py
src/memory_mcp/utils/: extraction.py  scoring.py  text.py
tests/: conftest.py  test_core.py  test_portable.py
